codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__plugin_detail_popup_npm_source.snap
---
source: tui/src/chatwidget/tests/popups_and_settings.rs
expression: strip_osc8_for_snapshot(&popup)
---
  插件
  Figma · 可安装 · ChatGPT Marketplace
  Data shared with this app is subject to the app's terms of service and privacy policy. Learn
  more.
  Turn Figma files into implementation context.

› 1. 返回插件列表  返回插件列表。
  2. 安装插件   立即安装此插件。
     来源           npm · @acme/figma-plugin@^1.2.0
     认证             认证 on install
     Skill           design-review, extract-copy
     钩子            PreToolUse (1), Stop (2)
     应用             Figma, Slack
     MCP 服务器      figma-mcp, docs-mcp

  按 Esc 关闭。
