codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__plugins_popup_curated_marketplace.snap
---
source: tui/src/chatwidget/tests/popups_and_settings.rs
expression: popup
---
  插件
  Browse plugins from available marketplaces.
  已安装 1 of 4 available plugins.

  [All 插件]  已安装 (1)  OpenAI Curated  Workspace  Repo Marketplace  Add Marketplace

  Type to search plugins
› [ ] Alpha Sync          Disabled         Space to enable; Enter view details.
  [-] Bravo Search        可用      · OpenAI Curated · Search docs and tickets.
  [-] Hidden Repo Plugin  可用      · Repo Marketplace · Should not be shown in /plugins.
  [-] Starter             Admin assigned · OpenAI Curated · Included by default.

  space enable/disable · ←/→ select marketplace · enter view details · esc close
