codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__plugins_popup_empty_shared_section_hidden.snap
---
source: tui/src/chatwidget/tests/popups_and_settings.rs
expression: loaded_popup
---
  插件
  Workspace.
  This section loaded successfully.

  All 插件  已安装 (0)  OpenAI Curated  [Workspace]  Add Marketplace

  Type to search plugins
› No workspace plugins available  No workspace directory plugins are available.

  space enable/disable · ←/→ select marketplace · enter view details · esc close
