codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__plugins_popup_loading_state.snap
---
source: tui/src/chatwidget/tests/popups_and_settings.rs
expression: popup
---
  插件
  正在加载可用插件...
  市场列表准备就绪后会更新此处。

›    正在加载插件...  市场列表准备就绪后会更新此处。

  Press enter to confirm or esc to go back
