codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__plugins_popup_marketplace_remove_confirmation.snap
---
source: tui/src/chatwidget/tests/popups_and_settings.rs
assertion_line: 411
expression: confirmation
---
  插件
  Remove Repo Marketplace marketplace?
  This removes the configured marketplace from Codex.

› 1. Remove marketplace  Remove this marketplace from the available plugin list.
  2. 返回插件列表     Keep this marketplace installed.

  enter select · esc close
