codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__plugins_popup_newly_installed_marketplace.snap
---
source: tui/src/chatwidget/tests/popups_and_settings.rs
assertion_line: 473
expression: popup
---
  插件
  Debug Marketplace installed successfully.
  Select the plugins you want to use and press Enter to install or view details.

  All 插件  已安装 (0)  OpenAI Curated  Workspace  [Debug Marketplace]  Add Marketplace

  Type to search plugins
› [-] Debug Plugin  可用   Press Enter to install or view plugin details.

  ctrl + u upgrade · ctrl + r remove · space toggle · ←/→ tabs · enter details · esc close
