codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__plugins_popup_search_filtered.snap
---
source: tui/src/chatwidget/tests/popups_and_settings.rs
assertion_line: 1684
expression: popup
---
  插件
  Browse plugins from available marketplaces.
  已安装 0 of 3 available plugins.

  [All 插件]  已安装 (0)  OpenAI Curated  Workspace  Add Marketplace

  sla
› [-] Slack      可用   Press Enter to install or view plugin details.

  space enable/disable · ←/→ select marketplace · enter view details · esc close
