codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__prompt_edit_thread_history_line.snap
---
source: tui/src/chatwidget/tests/history_replay.rs
expression: combined
---
• 你将在新对话中从此处继续
